<resources>
    <string name="app_name">Post Json</string>
    <string name="name">Name</string>
    <string name="email">email@email.com</string>
    <string name="post_details">post details</string>
    <string name="comments">comments</string>
    <string name="post_body">Post Body</string>
    <string name="posts">Posts</string>
    <string name="add_post">Add Posts</string>
    <string name="comments_title">Comments</string>
    <string name="post_details_title">Post Details</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="test">Test</string>
    <string name="delete">delete</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_question">Do you need delete this post?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="loading">Loading...</string>

</resources>