<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PostDetailsActivity">

        <include
            android:id="@id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/postDetails_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_title_marginStart"
            android:layout_marginTop="@dimen/post_title_marginTop"
            android:layout_marginEnd="@dimen/post_title_marginEnd"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/post_title_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/postDetails_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_title_marginStart"
            android:layout_marginTop="@dimen/post_title_marginTop"
            android:layout_marginEnd="@dimen/post_title_marginEnd"
            android:paddingTop="@dimen/commentsItem_email_paddingTop"
            android:text="@string/name"
            android:textSize="@dimen/commentsItem_email_textSize"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetails_title_textView" />

        <TextView
            android:id="@+id/postDetails_body_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/post_body_marginStart"
            android:layout_marginTop="@dimen/post_body_marginTop"
            android:layout_marginEnd="@dimen/post_body_marginEnd"
            android:text="@string/post_body"
            android:textColor="@android:color/black"
            android:textSize="@dimen/post_body_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetails_name_textView" />

        <Button
            android:id="@+id/comments_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/post_comments_btn_marginTop"
            android:background="@drawable/red_rouneded_btn_shape"
            android:text="@string/comments"
            android:textColor="@color/colorOfWhite"
            android:textSize="@dimen/post_comments_btn_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetails_body_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>